--- a/rutas_imagenes/src/styles/estilos.css
+++ b/rutas_imagenes/src/styles/estilos.css
@@ -43,7 +43,8 @@
  h1 {
      margin: 30px 0;
      text-align: center;
-     color: rgb(0, 162, 255);
+     color: #00a2ff;
+     text-shadow: 0px 0px 15px #00a2ff;   
      font-family: 'Courier New', Courier, monospace;
  }
 
