--- a/rutas_imagenes/src/styles/estilos.css
+++ b/rutas_imagenes/src/styles/estilos.css
@@ -1,87 +1,93 @@
- * {
-     margin: 0;
-     padding: 0;
-     box-sizing: border-box;
- }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
- body {
-     padding: 10px;
- }
+body {
+  padding: 10px;
+}
 
- a {
-     text-decoration: none;
- }
+a {
+  text-decoration: none;
+}
 
- .nav {
-     min-width: 250px;
-     width: 25%;
-     margin: 0 10px;
-     display: flex;
-     flex-direction: column;
-     /* border: 1px solid blue; */
- }
+.nav {
+  min-width: 250px;
+  width: 25%;
+  margin: 0 10px;
+  display: flex;
+  flex-direction: column;
+  /* border: 1px solid blue; */
+}
 
- nav a {
-     color: orange;
-     font-size: 1.6rem;
-     margin: 5px 0;
-     transition: all 300ms;
-     text-transform: capitalize;
- }
+nav a {
+  color: orange;
+  font-size: 1.6rem;
+  margin: 5px 0;
+  transition: all 300ms;
+  text-transform: capitalize;
+}
 
- nav a:hover {
-     color: #30ffba;
- }
+nav a:hover {
+  color: #30ffba;
+}
 
+body {
+  background-color: #22011f;
+  color: whitesmoke;
+}
 
+h1 {
+  margin: 30px 0;
+  text-align: center;
+  color: #00a2ff;
+  text-shadow: 0px 0px 15px #00a2ff;
+  font-family: "Courier New", Courier, monospace;
+}
 
- body {
-     background-color: #22011f;
-     color: whitesmoke;
- }
+h3 {
+  font-size: 1.8rem;
+  margin-left: 20px;
+  color: green;
+}
 
+.container {
+  padding: 10px;
+  /* border: 1px solid red; */
+  display: flex;
+  box-shadow: 0 0 10px inset yellow;
+  border-radius: 20px;
+}
 
- h1 {
-     margin: 30px 0;
-     text-align: center;
-     color: #00a2ff;
-     text-shadow: 0px 0px 15px #00a2ff;   
-     font-family: 'Courier New', Courier, monospace;
- }
+.menuNav {
+  border: 1px solid green;
+  color: white;
+}
 
- h3 {
-     font-size: 1.8rem;
-     margin-left: 20px;
-     color: green;
- }
+.pics {
+  /* border: 1px solid lime; */
+  width: 100%;
 
- .container {
-     
-     padding: 10px;
-     /* border: 1px solid red; */
-     display: flex;
-     box-shadow: 0 0 10px inset yellow;
-     border-radius: 20px;
- }
+  text-align: center;
+}
 
- .menuNav {
-     border: 1px solid green;
-     color: white;
- }
+.pics img {
+  min-height: 400px;
+}
 
- .pics {
-     /* border: 1px solid lime; */
-     width: 100%;
+.title-name {
+  color: #28ca66;
+  font-size: 1.6rem;
+  text-transform: capitalize;
+}
 
-     text-align: center;
- }
+.fotos {
+  width: 800px;
+  height: 750px;
+  margin: auto;
+}
 
- .pics img {
-     min-height: 400px;
- }
+.image-gallery-svg {
 
- .title-name {
-    color: #28ca66;
-    font-size: 1.6rem;
-    text-transform: capitalize;
- }
+}
